# log-rate-limit

./: .flake8  .gitattributes  CHANGELOG.md  NOTICE  README.md  pyproject.toml  run.sh
.github/workflows/: tests.yml
log_rate_limit/: __init__.py  log_rate_limit.py  streams.py
tests/: test_log_rate_limit.py  test_manual_rate_limit.py  utils.py
tests/examples/: example_adapter.py  example_adapter.txt  example_as_needed.py  example_as_needed.txt  example_default.py  example_default.txt  test_examples.py
