[tool.poetry]
name = "log-rate-limit"
version = "0.1.0"
description = ""
authors = ["Simon Muller <samullers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Change black's default line length from 88 to 120 characters.
line-length = 120
