[tool.poetry]
name = "log-rate-limit"
version = "1.2.2"
description = "Limit excessive log output with Python's standard logging framework."
authors = ["Simon Muller <samullers@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/samuller/log-rate-limit"
repository = "https://github.com/samuller/log-rate-limit"
keywords = ["logging", "log", "limit", "rate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries",
]
include = ["NOTICE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Change black's default line length from 88 to 120 characters.
line-length = 120
