[tool.poetry]
name = "log-rate-limit"
version = "1.4.2"
description = "Limit excessive log output with Python's standard logging framework."
authors = ["Simon Muller <samullers@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/samuller/log-rate-limit/blob/main/README.md"
repository = "https://github.com/samuller/log-rate-limit"
keywords = ["logging", "log", "limit", "rate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries",
]
include = ["NOTICE"]

[tool.poetry.urls]
"Changelog" = "https://github.com/samuller/log-rate-limit/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8.1"
redis = {version = "4.6.0", optional = true}

# Enables optional install with: poetry install --extras=redis
[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
ruff = "0.9.2"
pytest = "7.4.0"
pytest-cov = "4.1.0"
mypy = "1.4.1"
types-redis = "4.6.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Change black's default line length from 88 to 120 characters.
line-length = 120

[tool.ruff]
# Change ruff's default line length to 120 characters.
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "D", "W", "C90", "YTT", "ASYNC", "ICN", "LOG", "INP",
    "PYI", "ISC", "N", "B", "G", "FBT", "I", "S", "PL", "ANN", "PT",
    "SIM", "RET", "TRY", "FURB", "DJ", "DTZ"
]
ignore = [
    "TRY003",
    # We prefer explicit over implicit
    "RET501", "PLW0602",
]

[tool.ruff.lint.per-file-ignores]
# Ignore some checks in tests
"**/test*.py" = ["S101", "SIM115", "ANN", "PLR2004", "FBT003", "PLW0603", "INP"]
# Ignore some checks in examples
"**/examples/*.py" = ["S", "B007", "G004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.html]
# See https://pytest-cov.readthedocs.io/en/latest/contexts.html
show_contexts = true
